force-app/main/default/objects/Dealer_Stock__c/Dealer_Stock__c.object-meta.xml
<CustomObject>
    <label>Stocks</label>
    <nameField>
        <displayFormat>DSN-{0000}</displayFormat>
        <label>Dealer Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>