force-app/main/default/objects/Dealer_Stock__c/fields/DistributorWithProduct__c.field-meta.xml
<CustomField>
    <fullName>DistributorWithProduct__c</fullName>
    <formula>CASESAFEID(Store__c)+&apos;_&apos;+ CASESAFEID(Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DistributorWithProduct</label>
    <type>Text</type>
</CustomField>