force-app/main/default/objects/Dealer_Stock__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipName>Dealer_stocks</relationshipName>
    <type>Lookup</type>
</CustomField>