force-app/main/default/objects/Dealer_Stock__c/fields/No_of_Retailers_Catering__c.field-meta.xml
<CustomField>
    <fullName>No_of_Retailers_Catering__c</fullName>
    <label>No of Retailers Catering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>