force-app/main/default/objects/Dealer_Stock__c/fields/Primary_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Primary_Outstanding__c</fullName>
    <label>Primary Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>