force-app/main/default/objects/Dealer_Stock__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipName>Dealer_stocks</relationshipName>
    <type>Lookup</type>
</CustomField>