force-app/main/default/objects/Dealer_Stock__c/fields/Product_categorytext__c.field-meta.xml
<CustomField>
    <fullName>Product_categorytext__c</fullName>
    <label>Product category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>