force-app/main/default/objects/Dealer_Stock__c/fields/Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Text__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>