force-app/main/default/objects/Dealer_Stock__c/fields/Project_Contribution_from_Co__c.field-meta.xml
<CustomField>
    <fullName>Project_Contribution_from_Co__c</fullName>
    <label>Project Contribution from Co</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>