force-app/main/default/objects/Dealer_Stock__c/fields/Secondary_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Outstanding__c</fullName>
    <label>Secondary Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>