force-app/main/default/objects/Dealer_Stock__c/fields/Stock_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Date</label>
    <type>Date</type>
</CustomField>