force-app/main/default/objects/Dealer_Stock__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Dealer_stocks</relationshipName>
    <type>Lookup</type>
</CustomField>