force-app/main/default/objects/Dealer_Stock__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Stock value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>