force-app/main/default/objects/Dealer_Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>UOM__c</columns>
    <columns>Visit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>