force-app/main/default/objects/Dealer_Stock__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>UOM__c</columns>
    <columns>Visit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>